src/kits/interface/ToolTipManager.cpp
@@ -1,5 +1,5 @@
 /*
- * Copyright 2009-2010, Axel Dörfler, axeld@pinc-software.de.
+ * Copyright 2009-2012, Axel Dörfler, axeld@pinc-software.de.
  * Copyright 2009, Stephan Aßmus <superstippi@gmx.de>.
  * All rights reserved. Distributed under the terms of the MIT License.
  */
@@ -285,12 +285,13 @@ ToolTipView::ResetWindowFrame(BPoint where)
 // #pragma mark -
 
 
-ToolTipWindow::ToolTipWindow(BToolTip* tip, BPoint where)
+ToolTipWindow::ToolTipWindow(BToolTip* tip, BPoint where, void* owner)
 	:
 	BWindow(BRect(0, 0, 250, 10).OffsetBySelf(where), "tool tip",
 		B_BORDERED_WINDOW_LOOK, kMenuWindowFeel,
 		B_NOT_ZOOMABLE | B_NOT_MINIMIZABLE | B_AUTO_UPDATE_SIZE_LIMITS
-			| B_AVOID_FRONT | B_AVOID_FOCUS)
+			| B_AVOID_FRONT | B_AVOID_FOCUS),
+	fOwner(owner)
 {
 	SetLayout(new BGroupLayout(B_VERTICAL));
 
@@ -323,6 +324,7 @@ ToolTipWindow::MessageReceived(BMessage* message)
 
 			BMessage reply(B_REPLY);
 			reply.AddPointer("current", tip);
+			reply.AddPointer("owner", fOwner);
 
 			if (message->SendReply(&reply) == B_OK)
 				tip->AcquireReference();
@@ -363,36 +365,30 @@ BToolTipManager::Manager()
 }
 
 
-/*static*/ void
-BToolTipManager::_InitSingleton()
-{
-	sDefaultInstance = new BToolTipManager();
-}
-
-
 void
-BToolTipManager::ShowTip(BToolTip* tip, BPoint point)
+BToolTipManager::ShowTip(BToolTip* tip, BPoint point, void* owner)
 {
 	BToolTip* current = NULL;
+	void* currentOwner = NULL;
 	BMessage reply;
-	if (fWindow.SendMessage(kMsgCurrentToolTip, &reply) == B_OK)
+	if (fWindow.SendMessage(kMsgCurrentToolTip, &reply) == B_OK) {
 		reply.FindPointer("current", (void**)&current);
+		reply.FindPointer("owner", &currentOwner);
+	}
 
+	// Release reference from the message
 	if (current != NULL)
 		current->ReleaseReference();
 
-	if (current == tip) {
+	if (current == tip || currentOwner == owner) {
 		fWindow.SendMessage(kMsgShowToolTip);
 		return;
 	}
 
 	fWindow.SendMessage(kMsgHideToolTip);
 
-	if (current != NULL)
-		current->ReleaseReference();
-
 	if (tip != NULL) {
-		BWindow* window = new BPrivate::ToolTipWindow(tip, point);
+		BWindow* window = new BPrivate::ToolTipWindow(tip, point, owner);
 		window->Show();
 
 		fWindow = BMessenger(window);
@@ -458,4 +454,11 @@ BToolTipManager::BToolTipManager()
 
 BToolTipManager::~BToolTipManager()
 {
+}
+
+
+/*static*/ void
+BToolTipManager::_InitSingleton()
+{
+	sDefaultInstance = new BToolTipManager();
 }
